Tested/Learned more html tags and tested them

--- a/templates/header.html
+++ b/templates/header.html
@@ -7,16 +7,36 @@
 </title>
 </head>
 
+<h1 id="top">
+Hello World!
+</h1>
+
 <body>
 This test website body contains info that is not currently placed onto the
-website. Look at the design of the website while you are at it
+website. <b> Look at the design of the website while you are at it </b>
+
+<hr />
+
+<abbr title="Hello There"><a href="http:///www.Ucsd.edu">
+Test Abbreviation
+</a></abbr>
 
 <h1> A list of stuff </h1>
 <ul>
-    <li>first thing</li>
-    <li> second thing</li>
+    <li>first things</li>
+        <ol>
+            <li>first thing of first things</li>
+            <li>second thing of first things</li>
+        </ol>
+    <li><a href="/second_page" target="_blank"> second thing</a></li>
     <li> third thing </li>
 </ul>
+
+<p>
+<a href="#top">
+test top
+</a>
+</p>
 
 </body>
 
