--- a/templates/header.html
+++ b/templates/header.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html5>
 
 <head>
 <link rel="stylesheet" type="text/css" href="static/style.css" media="screen" />
@@ -11,11 +11,22 @@
 Hello World!
 </h1>
 
+
+<div id="header">
+<hr />
+<ul id="top_directory">
+    <li><a href="/">  Home  </a></li>
+    <li><a href="/About">  About  </a></li>
+    <li><a href="/Projects">  Projects  </a> </li>                
+</ul>
+<hr/ id="padding">
+</div>
+
+
 <body>
 This test website body contains info that is not currently placed onto the
 website. <b> Look at the design of the website while you are at it </b>
 
-<hr />
 
 <abbr title="Hello There"><a href="http:///www.Ucsd.edu">
 Test Abbreviation
@@ -39,6 +50,9 @@ test top
 </p>
 
 </body>
-
+<div id="footer">
+<hr />
+By Ken Shaffer
+</div>
 
 
