--- a/templates/header.html
+++ b/templates/header.html
@@ -25,7 +25,7 @@ Hello World!
 
 <body>
 This test website body contains info that is not currently placed onto the
-website. <b> Look at the design of the website while you are at it </b>
+website. 
 
 
 <abbr title="Hello There"><a href="http:///www.Ucsd.edu">
